# trading

./: .gitignore  Cargo.toml  README.md
ml/: backtest.py  config.py  requirements.txt  train.py
ml/checkpoints/: best_model.pt  deeplob.safetensors  model_config.json  zscore_params.json  zscore_params.npz
ml/data/: collector.py  labeler.py  preprocessor.py  ws_collector.py
ml/data_store/: real_snapshots_2min.csv
ml/model/: deeplob.py  export.py
scratch/: test_stride.rs
src/: config.rs  error.rs  main.rs  types.rs
src/dashboard/: mod.rs  page.html  server.rs
src/engine/: account.rs  matching.rs  mod.rs
src/feed/: binance.rs  mod.rs
src/strategy/: dca_accumulator.rs  deeplob_maker.rs  indicators.rs  ml.rs  mod.rs  risk.rs  traits.rs
